name:                blobster
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/blobster#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Zuikov 
maintainer:          dzuikov@gmil.com 
copyright:           2017 Dmitry Zuikov
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Blobster 
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring
                     , cereal
                     , cryptonite
                     , directory
                     , filepath
                     , memory

  default-language:    Haskell2010

  default-extensions:
    OverloadedStrings

test-suite blobster-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blobster
                     , bytestring
                     , HUnit
                     , temporary

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/voidlizard/blobster

